- 0.8.3

    Bug fixed: Clairvoyant javascript alert on followups would repeat
    the same message over and over (almost blinking).

    New feature: Name and email is saved in a cookie when working on a
    draft if the name/email isn't already set.

    Change: If in DEBUG mode (environment variable
    DEBUG_ISSUETRACKERPRODUCT) emails are printed to stdout
    
- 0.8.2

    Bug fixed: Error on duplicate in on second followups in issues.
    Real#0665 and Real#0666
    
- 0.8.1 

    Bug fixed: The clarvoyent AJAX feature would show if someone is
    working a different issue to the one you're looking at.
    
- 0.8.0

    New feature: Ability to compare issues (experimental). Only works
    when using keyboard shortcuts. Key: c
    
    New feature: Now you can assign an issue to anybody even after
    it's been created and even if it didn't already have an assignment.
    Real#0299, Real#0188, Real#0081
    
    Bug fixed: Sending assignment emails from a user with non-ASCII
    name would cause an UnicodeDecodeError.

    New feature: Uses jQuery 1.2.1
    
    Bug fixed: Cancelling a go-to-issue keyboard command caused a
    Javascript error.
    
    New feature: Upgraded to addhrefs 0.9.3

    Bug fixed: preParseEmailString would sometimes barf on unicode
    strings for translation.
    
    Bug fixed: UnicodeDecodeError wasn't raised properly in processing
    inbound email reply and formatflowed_decode() was called with wrong 
    parameter. Thanks Robert Leftwich (Real#0642)

    Bug fixed: When you reply via email to an issue, no notification
    was sent to those involved in the issue. Thanks Robert Leftwich.
    (Real#0413)
    
    New feature: When you reach the last line in any textarea input
    (eg. on adding a new issue) the textarea box automatically expands
    to add a few extra blank lines.
    
    New feature: Expires header set to all static content and set much
    further into the future for better HTTP caching.
    