@@ -1,3 +1,8 @@
+- 
+
+    Bug fixed: Issues were uncataloged twice when deleting causing a
+    harmless extra message in the event log.
+    
 - 0.8.3
 
     Bug fixed: Clairvoyant javascript alert on followups would repeat
